test/2-errors/dash.test
{
  'code' : 1,
  'err' : '''\
test/2-errors/dash.ploy:1:2: parse error: unexpected character: '\\n'
    -
     ^
'''
}
